# anchor-token-metadata

./: Anchor.toml  package-lock.json  package.json
programs/token-metadata/: Cargo.toml
programs/token-metadata/src/: lib.rs
tests/: token-metadata.ts
